# netskope-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: netskope.md  release.md
docs/: index.html
src/netskope_cli/: main.py
src/netskope_cli/commands/: adem_cmd.py  alerts_cmd.py  atp_cmd.py  auth_cmd.py  completion_cmd.py  config_cmd.py  dem_cmd.py  devices_cmd.py  dns_cmd.py  docs_cmd.py  dspm_cmd.py  enrollment_cmd.py  events_cmd.py  incidents_cmd.py  ips_cmd.py  ipsec_cmd.py  notifications_cmd.py  nsiq_cmd.py  policy_cmd.py  publishers_cmd.py  rbac_cmd.py  rbi_cmd.py  services_cmd.py  spm_cmd.py  status_cmd.py  steering_cmd.py  tokens_cmd.py  tree_cmd.py  users_cmd.py
src/netskope_cli/commands/npa/: __init__.py  _helpers.py  alerts_config_cmd.py  app_publishers_cmd.py  apps_cmd.py  discovery_cmd.py  local_brokers_cmd.py  policy_cmd.py  search_cmd.py  (+3 more)
src/netskope_cli/core/: browser_auth.py  client.py  config.py  exceptions.py  output.py  version_check.py
src/netskope_cli/utils/: helpers.py
tests/integration/: test_cli_commands.py  test_dem_integration.py
tests/unit/: test_adem_cmd.py  test_client.py  test_config.py  test_dem_cmd.py  test_exceptions.py  test_helpers.py  test_output.py  test_status_cmd.py  test_tree_cmd.py  test_users_cmd.py  test_version_check.py
tests/unit/npa/: conftest.py  test_alerts_config_cmd.py  test_app_publishers_cmd.py  test_apps_cmd.py  test_discovery_cmd.py  test_local_brokers_cmd.py  test_policy_cmd.py  test_publishers_cmd.py  test_search_cmd.py  test_tags_cmd.py  test_upgrade_profiles_cmd.py
