[tool.poetry]
name = "netskope"
version = "0.2.9"
description = "The official Netskope CLI — manage your Netskope tenant from the command line"
authors = ["Netskope"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/netSkopeoss/netksope-cli"
packages = [{include = "netskope_cli", from = "src"}]

[tool.poetry.scripts]
netskope = "netskope_cli.main:cli"
ntsk = "netskope_cli.main:cli"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = ">=0.9,<1.0"}
rich = ">=13.0,<15.0"
httpx = ">=0.25,<1.0"
toml = ">=0.10,<1.0"
keyring = ">=24.0,<27.0"
pydantic = ">=2.0,<3.0"
pydantic-settings = ">=2.0,<3.0"
pyyaml = ">=6.0,<7.0"
playwright = {version = ">=1.40,<2.0", optional = true}

[tool.poetry.extras]
browser = ["playwright"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.21,<2.0"
pytest-cov = ">=4.0,<8.0"
pytest-mock = ">=3.0,<4.0"
respx = ">=0.20,<1.0"
ruff = ">=0.1,<1.0"
black = ">=23.0,<27.0"
mypy = ">=1.0,<2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
